--- a/build.gradle
+++ b/build.gradle
@@ -5,18 +5,17 @@ buildscript {
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.11.6"
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.4.0"
     }
 }
 
 version "0.1"
-group "org.grails.plugins"
+group 'org.grails.plugins'
 
 apply plugin:"idea"
 apply plugin:"org.grails.grails-plugin"
 apply plugin:"org.grails.grails-plugin-publish"
-apply plugin:"org.grails.grails-gsp"
-apply plugin:"asset-pipeline"
+apply plugin: "com.jfrog.artifactory"
 
 repositories {
     mavenLocal()
@@ -39,30 +38,32 @@ dependencies {
     console "org.grails:grails-console"
     profile "org.grails.profiles:web-plugin"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.11.6"
-    testCompile "org.grails:grails-plugin-testing"
 }
 
-bootRun {
-    jvmArgs('-Dspring.output.ansi.enabled=always')
-}
-// enable if you wish to package this plugin as a standalone application
-bootRepackage.enabled = false
 grailsPublish {
     user = System.getenv("BINTRAY_USER") ?: project.bintrayUser
     key = System.getenv("BINTRAY_KEY") ?: project.bintrayKey
-    githubSlug = 'https://github.com/sdelamo/grails-trix-editor'
+    portalUser = System.getenv("GRAILS_PORTAL_USER") ?: project.grailsPortalUser
+    portalPassword = System.getenv("GRAILS_PORTAL_PASSWORD") ?: project.grailsPortalPassword
+
+    githubSlug = "sdelamo/$project.name"
     license {
         name = 'Apache-2.0'
     }
-    title = "Grails Trix-Editor Plugin"
-    desc = "A Grails 3 Plugin to integrate trix-editor.org as a TagLib"
+    title = "Grails GeoPlugin"
+    desc = "Exposes a Grails service which queries the geoplugin api given an ip address"
     developers = [sdelamo:"Sergio del Amo"]
-    portalUser = System.getenv("GRAILS_PORTAL_USER") ?: project.grailsPortalUser
-    portalPassword = System.getenv("GRAILS_PORTAL_PASSWORD") ?: project.grailsPortalPassword
 }
-
-
-assets {
-    minifyJs = true
-    minifyCss = true
+artifactory {
+    contextUrl = 'http://oss.jfrog.org'
+    publish {
+        repository {
+            repoKey = 'oss-snapshot-local'
+            username = System.getenv("BINTRAY_USER") ?: project.bintrayUser
+            password = System.getenv("BINTRAY_KEY") ?: project.bintrayKey
+        }
+        defaults {
+            publications('maven')
+        }
+    }
 }
