--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     console "org.grails:grails-console"
     profile "org.grails.profiles:web-plugin"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.11.6"
+    testCompile "org.grails:grails-plugin-testing"
 }
 
 grailsPublish {
