--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,11 @@
 grailsVersion=3.2.5
 grailsWrapperVersion=1.0.0
 gradleWrapperVersion=3.0
+
+project_description=Grails 3 Plugin to integrate Trix Editor
+project_url=https://github.com/sdelamo/grails-trix-editor
+project_scm=https://github.com/sdelamo/grails-trix-editor
+project_issues_url=https://github.com/sdelamo/grails-trix-editor
+project_connection=scm:git:https://github.com/sdelamo/grails-trix-editor.git
+project_dev_connection=scm:git:https://github.com/sdelamo/grails-trix-editor.git
+project_bintray_repo=plugins
