Change default package

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -2,7 +2,7 @@
 grails:
     profile: web-plugin
     codegen:
-        defaultPackage: grails.trix.editor
+        defaultPackage: org.grails.plugins.trixeditor
     spring:
         transactionManagement:
             proxies: false
