--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ apply plugin:"org.grails.grails-plugin"
 apply plugin:"org.grails.grails-plugin-publish"
 apply plugin:"asset-pipeline"
 apply plugin: "com.jfrog.artifactory"
+apply from: "${rootProject.projectDir}/gradle/codenarc.gradle"
 
 repositories {
     mavenLocal()
